feat: put in localstorage to remember language

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <option value="fr">French</option>
     </select>
 
-    <p id="content">Life is a dream, make it a reality.</p>
+    <p id="content"></p>
 
     <script src="language.js"></script>
-
+    <script src="localStorageHandler.js"></script>
 </body>
 </html>
